Adjustment to the build-exe.bat file, the pom.xml and landing page.xml file